--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    crossorigin=""></script>
   
   
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
   
@@ -39,7 +39,7 @@
     
 
     <div class="ip-container">
-      <img src="../images/pattern-bg.png" alt="Background image">
+      <img src="./pattern-bg.png" alt="Background image">
       
       <div class="ip-section">
         <h2>IP Address Tracker</h2>
